# AXIOMN

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  STRATEGY.md  UNIFIED_ARCHITECTURE.md  VISION.md  compose.yml  fly.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-semantic.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  publish-sdk.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/axiomn/assistant/: AxiomnApiClient.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
axiomn/: __init__.py  audit.py  budget.py  decision.py  local.py  observability.py  quality.py  store.py
axiomn/action/: engine.py  schema.py
axiomn/api/: main.py  security.py
axiomn/api/static/: dashboard.html  index.html  savings.html  widget.js
axiomn/execution/: engine.py
axiomn/gateway/: __init__.py  catalog.py  estimate.py  handler.py  providers.py
axiomn/intent/: classifiers.py  embedding.py  engine.py  llm_fallback.py  schema.py  signals.py
axiomn/metrics/: collector.py
axiomn/models/: backends.py  tools.py
axiomn/queue/: __init__.py  engine.py
axiomn/router/: router.py
axiomn/sandbox/: __init__.py  verity.py
scripts/: loadtest.py
sdk/: README.md  pyproject.toml
sdk/axiomn_sdk/: __init__.py  client.py
sdk/tests/: conftest.py  test_client.py
tests/: test_action_engine.py  test_api.py  test_api_versioning.py  test_audit.py  test_budget.py  test_classifiers.py  test_decision.py  test_estimate.py  test_execution.py  test_gateway.py  test_human_queue.py  test_intent_engine.py  test_llm_fallback.py  test_local.py  test_metrics.py  test_observability.py  test_production.py  test_providers.py  test_quality.py  test_queue_api.py  test_router.py  test_routing_benchmark.py  test_sandbox.py  test_security.py  test_semantic_intent.py  test_semantic_intent_live.py  test_signals.py  test_store.py  test_web_demo.py
