[project]
name = "axiomn"
version = "0.2.1"
description = "AXIOMN: an open-source intent mediation runtime, and the Gateway built on it."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "langdetect>=1.0.9",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axiomn*"]

[tool.setuptools.package-data]
"axiomn.api" = ["static/*"]
