[project]
name = "axiomn"
version = "0.2.1"
description = "AXIOMN: an open-source intent mediation runtime, and the Gateway built on it."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "langdetect>=1.0.9",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axiomn*"]

[tool.setuptools.package-data]
"axiomn.api" = ["static/*"]

[tool.mypy]
python_version = "3.11"
files = ["axiomn"]
# Third-party packages without type stubs (langdetect, uvicorn plugins) must not
# fail the type check for our own code.
ignore_missing_imports = true
# Enforce the guarantees that matter for a runtime other software depends on,
# without demanding a from-scratch annotation of every local. Tightened over
# time as the codebase converges on full typing.
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
