[project]
name = "axiomn-sdk"
version = "0.2.0"
description = "Thin Python client for the AXIOMN intent routing API."
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axiomn_sdk*"]
