[project]
name = "axiomn-sdk"
version = "0.2.0"
description = "Thin Python client for the AXIOMN intent routing API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]
authors = [{ name = "AXIOMN" }]
keywords = ["axiomn", "llm", "routing", "intent", "gateway", "api-client"]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/haynbroit-alt/AXIOMN"
Repository = "https://github.com/haynbroit-alt/AXIOMN"
Issues = "https://github.com/haynbroit-alt/AXIOMN/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["axiomn_sdk*"]

[tool.setuptools.package-data]
axiomn_sdk = ["py.typed"]
